added user profile and use it for prediction (age, gender, bmi etc.)
